# AUTOMATA

./: .gitignore  CMakeLists.txt  README.md  SAMPLES.py  foo_python.py
bindings/: bindings.cpp
include/: GlobalConfig.h  MathConstants.h  Monomial.h  MultivariablePolynomial.h  MultivariablePolynomialFraction.h  automata.hpp  expr_parser.hpp  operation.hpp  parenthesis.hpp  tree_splitter.h  tree_splitter.hpp
src/: automata.cpp
src/basic_types/: operation.cpp  parenthesis.cpp
src/binary_tree/: tree_splitter.cpp
src/parsing/: expr_parser.cpp
src/poly_engine/: Monomial.cpp  MultivariablePolynomial.cpp  MultivariablePolynomialFraction.cpp  poly_engine.cpp
tests/: Monomial_tests.cpp  MultivariablePolynomial_tests.cpp
